force-app/main/default/objects/clofor_com_cfs__HSUInsuranceACBal__c/fields/clofor_com_cfs__HealthInsuByEmployerACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HealthInsuByEmployerACBal__c</fullName>
    <label>HEALTH INSURANCE BY EMPLOYER-A/C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>