force-app/main/default/objects/clofor_com_cfs__HSUInsuranceACBal__c/fields/clofor_com_cfs__HealthInsuByEmployerForm__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HealthInsuByEmployerForm__c</fullName>
    <formula>clofor_com_cfs__HSUInsuranceID__r.clofor_com_cfs__SocialInsuranceByEmployer__c</formula>
    <label>HEALTH INSURANCE BY EMPLOYER-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>