force-app/main/default/objects/clofor_com_cfs__HSUInsuranceACBal__c/fields/clofor_com_cfs__HSUInsuranceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HSUInsuranceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>H/S/U INSURANCE ID</label>
    <referenceTo>clofor_com_cfs__HSUInsurance__c</referenceTo>
    <relationshipLabel>H/S/U INSURANCE+A/C BAL</relationshipLabel>
    <relationshipName>HSUInsuranceIACBal</relationshipName>
    <type>Lookup</type>
</CustomField>