force-app/main/default/objects/clofor_com_cfs__HSUInsuranceACBal__c/fields/clofor_com_cfs__SocialInsuranceFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SocialInsuranceFormu__c</fullName>
    <formula>clofor_com_cfs__HSUInsuranceID__r.clofor_com_cfs__SocialInsuranceByEmployer__c 
+
 clofor_com_cfs__HSUInsuranceID__r.clofor_com_cfs__SocialInsuranceByEmployee__c</formula>
    <label>SOCIAL INSURANCE-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>