force-app/main/default/objects/clofor_com_cfs__HSUInsuranceACBal__c/fields/clofor_com_cfs__UnemploymentInsuranceACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnemploymentInsuranceACBal__c</fullName>
    <label>UNEMPLOYMENT INSURANCE-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>